# software_engineer_demo

benchmark_test/: Cargo.toml
benchmark_test/.github/workflows/: ci.yml
benchmark_test/benches/: benchmark_sum_slice.rs
benchmark_test/fuzz/: Cargo.toml
benchmark_test/fuzz/fuzz_targets/: fuzz_parse_integer.rs
benchmark_test/src/: lib.rs
cargo_test/fuzz/fuzz_targets/: fuzz_evaluate.rs
cargo_test/src/: main.rs
mpsc_Rayon_demo/: .gitignore  Cargo.toml  README.md  exp_result.md
mpsc_Rayon_demo/c_demo/: openmp_analytics.c  ticket_race.c
mpsc_Rayon_demo/docs/: demo_script_zh.md
mpsc_Rayon_demo/safety_demos/: README.md  mpsc_non_send_rc.rs  mpsc_use_after_send.rs
mpsc_Rayon_demo/safety_demos/rayon_safe_fold/: Cargo.toml
mpsc_Rayon_demo/safety_demos/rayon_safe_fold/src/: main.rs
mpsc_Rayon_demo/safety_demos/rayon_shared_mutation/: Cargo.toml
mpsc_Rayon_demo/safety_demos/rayon_shared_mutation/src/: main.rs
mpsc_Rayon_demo/scripts/: run_openmp_vs_rayon.ps1  run_safety_demos.ps1
mpsc_Rayon_demo/src/: main.rs
src/: lib.rs
